# sha3_arm

./: .gitignore  CMakeLists.txt  README.md
benchmarks/: neon.txt
benchmarks/raspi2/: generic.txt
benchmarks/raspi3/: generic.txt  neon.txt
c_src/: CMakeLists.txt  KeccakF1600_arm.S  KeccakF1600_example.c  keccak_sum.c  libkeccak.c
c_src/include/: KeccakF1600ARM.h  libkeccak.h
cmake/: Golang.cmake
cmd/keccakf1600_permute/: main.go
cmd/sha3/: main.go
sha3/: sha3.go
sha3-fast/: doc.go  hashes.go  keccakf_amd64.go  keccakf_arm.go  keccakf_generic.go  keccakf_noasm.go  sha3.go  sha3_test.go  shake.go  xor_generic.go
sha3_fast/: keccak.arms  keccakf_arm.go  keccakf_arm.s  keccakf_generic.go  register.go  sha3.go  xor.go  xor_unaligned.go
sha3_fast/asm_src/: keccakf2_arm.s  keccakf_arm.s
src/: CMakeLists.txt  libkeccak.c
